--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <header id="header">
         <div id="logo">
           <h6>
-            Your Name
+            SHAHAN ALI
           </h6>
           <h4>
             Tag1 / Tag2
@@ -116,13 +116,13 @@
                 <div class="info">
                   <h2>
                     <p></p>
-                    Your Name
+                    SHAHAN ALI
                   </h2>
                   <h4>
-                    Your work tag
+                    I AM AN TECH EXPERT
                   </h4>
                   <p>
-                    Type your description here.
+                    HI GUYS HOPE YOU ARE GOOD WELCOME TO MY SHORT INTRO .
                   </p>
                   </p>
                 </div>
@@ -157,7 +157,7 @@
                     <i class="icon-envelope"></i>
                     <div class="item-data">
                       <h3>
-                        <a href="mailto:write@your_mail.here">
+                        <a href="mailto:luciferkiller315@gmail.com">
                           Add Your mail
                         </a>
                       </h3>
